test/files/pos/kinzer.scala
// ScalaMenuTest.scala
object ScalaMenuTest {
  def main(args: Array[String]): Unit = {
    val v = new javax.swing.JMenu()
    v.add(new javax.swing.JMenuItem())
    //v.add(new java.awt.PopupMenu());
  }
}
